# 23-VTOL

./: Dockerfile  LD_optimization.py  README.md  aam_mission.plan  rescue_system.py
ROS/Node/: FSM_Node
auto_mission/: CMakeLists.txt  package.xml
auto_mission/launch/: launch.py
auto_mission/src/: waypoint_node.cpp
camera/: packet_spy.py  pose_estimation_gimbal.py  siyi_gimbal.c  siyi_gimbal.py
src/header/: standard.h
src/parameter/: standard_param
src/vtol_control/: standard.cpp
vtol_aruco/: CMakeLists.txt  package.xml
vtol_aruco/launch/: aurco_detector_launch.py
vtol_aruco/scripts/: generate_aruco_all.py
vtol_aruco/src/: aruco_detector_node
vtol_mission/: CMakeLists.txt  package.xml
vtol_mission/launch/: takeoff.launch.py
vtol_mission/src/: takeoff_land_node.cpp  vtol_mission.cpp
